docs/7.57/md/abenst_programs_structure.md
---
title: "ST - Structure of ST Programs"
description: |
  Syntax <?sap.transform simple?> <tt:transform template='tmpl' xmlns:tt='http://www.sap.com/transformation-templates'> <tt:type name='...' ...> ... </tt:type> ... <tt:root name='root1' ... /> <tt:root name='root2' ... /> ... <tt:parameter name='par
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_programs_structure.htm"
abapFile: "abenst_programs_structure.htm"
keywords: ["do", "if", "data", "abenst", "programs", "structure"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) →  [XML - Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_trafos.htm) →  [Simple Transformations (ST)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_st.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ST - Structure of ST Programs, ABENST_PROGRAMS_STRUCTURE, 757%0D%0A%0D%0AError:%0D%0A
%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

ST - Structure of ST Programs

Syntax

<?sap.transform simple?>
<tt:transform *\[*template="tmpl"*\]*
  xmlns:tt="http://www.sap.com/transformation-templates">
  *\[*<tt:type name="..." *\[*...*\]*\>
     ...
   </tt:type>
   ...*\]*
  *\[*<tt:root name="root1" *\[*...*\]* />
   <tt:root name="root2" *\[*...*\]* />
   ...*\]*
  *\[*<tt:parameter name="para1" *\[*...*\]* />
   <tt:parameter name="para2" *\[*...*\]* />
   ...*\]*
  *\[*<tt:variable name="vari1" *\[*...*\]* />
   <tt:variable name="vari2" *\[*...*\]* />
   ...*\]*
  <tt:template *\[*name=="tmpl"*\]*\>
    ...
  </tt:template>
  *\[*<tt:template *\[*name=="..."*\]*\>
     ...
   </tt:template>
  ...*\]*
</tt:transform>

Effect

An ST program must consist of valid XML data that is structured as shown here.

-   The first line <? ... ?> serves to identify the transformation type (ST). It does not need to be entered because the syntax check adds it automatically.
-   The elements of the namespace http://www.sap.com/transformation-templates are [ST statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_statements.htm). The namespace prefix tt is used in this documentation as a convention for this namespace. ST statements can be XML elements or attributes. All other components of an XML element are so called literal elements, which means that they have no semantics within the ST language.
-   Possible elements of an ST program are:
    
    -   Type definitions using [tt:type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_type.htm).
    -   A root element [tt:transform](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_transform.htm).
    -   Various data declarations using [tt:root](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_root.htm), [tt:parameter](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_parameter.htm), and [tt:variable](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_variable.htm).
    -   A [main template](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_template_main.htm) defined with tt:template and any number of [subtemplates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_template_sub.htm). A template is a pattern for the XML data into which ABAP data is serialized or from which data is deserialized.
    
    These elements can be in any order.
    

Hint

In this documentation and in the example programs, double quotation marks (") are used as outer quotation marks and single quotation marks (') as inner quotation marks. However, as usual in XML, this is not mandatory. For example, 'not-initial(ref("X.Y"))' can be written instead of "not-initial(ref('X.Y'))".

Executable Example

[Example of an ST program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_program_abexa.htm)

Continue
[ST - tt:transform, Root Element](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_transform.htm)
[ST - tt:type, tt:front, tt:node, Type Definitions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_type.htm)
[ST - Data Declarations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_data_declarations.htm)
[ST - tt:template, Main Template](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_template_main.htm)
![Example](exa.gif "Example") [ST - Example of an ST Program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_program_abexa.htm)